fix: 로고 사진 상대경로로 수정